force-app/main/default/objects/Payment1__c/Payment1__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <displayFormat>PN-{000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>