force-app/main/default/objects/Payment1__c/fields/Is_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Year__c</fullName>
    <formula>YEAR(  DATEVALUE( CreatedDate )  )  =  YEAR(  TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Year</label>
    <type>Checkbox</type>
</CustomField>